# Agent-mem

./: .env  .gitignore  API_DOCUMENTATION.md  DEPLOYMENT_GUIDE.md  Dockerfile  Makefile  README.md  app.py  build-docker.sh  config.py  config_scenarios.py  docker-compose.yml  env.example  logging_config.py  pgsql_dual_db_migration.py  pyproject.toml  requirements-dev.txt  requirements-prod.txt  requirements.txt  start.sh  start_server.py  weaviate_migration_test.py  启动说明.md  最终优化说明.md
docker/: Dockerfile  docker-compose.yml
middleware/: simple_auth.py
models/: es_models.py  redis_models.py
prompts/: fact_extraction.py
services/: arq_tasks.py  async_logging_service.py  async_memory_service_v2.py  content_compression_service.py  conversation_cache_service.py  embedding_service.py  fact_extraction_service.py  lightweight_hybrid_search.py  llm_semantic_search_service.py  llm_service.py  memory_management_service.py  persistence_service.py  redis_cache_service.py  redis_light_graph.py  sliding_window_extractor.py  test_memory_manage_optimization.py  unified_cache_service.py
test/: README.md  README_MEMORY_TESTS.md  debug_es_search.py  debug_persistence_issue.py  debug_search_facts.py  load_test.py  quick_test_clear_api.py  run_all_tests.py  run_clear_tests.py  run_memory_tests.py  test_auth.py  test_basic_memory.py  test_cache_operations.py  test_cleanup_api.py  test_clear_es_api.py  test_clear_es_simple.py  test_es_index.py  test_es_search_debug.py  test_fact_extraction_question_only.py  test_imports_fixed.py  test_interjection_detection.py  test_llm_quality_check.py  test_memory_add_and_search.py  test_memory_api.py  test_memory_quick.py  test_optimizations.py  test_recent_chats.py  test_recent_chats_real_data.py  test_relevance_check.py  test_search_accuracy.py  test_search_issue.py  test_search_optimization.py  test_similar_qa_recall.py
