[project]
name = "yaxin-memo"
version = "1.0.0"
description = "智能记忆管理系统 - 基于FastAPI的异步记忆存储和语义搜索服务"
authors = [
    {name = "Yaxin Team", email = "team@yaxin.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = {text = "MIT"}
keywords = ["memory", "ai", "fastapi", "redis", "elasticsearch", "semantic-search"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Web框架
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "aiohttp>=3.9.0",
    "aiofiles>=23.0.0",
    "pydantic>=2.0.0",
    
    # 数据库和存储
    "redis>=4.5.0",
    "elasticsearch>=8.0.0",
    
    # HTTP客户端
    "requests>=2.31.0",
    "httpx>=0.24.0",
    
    # 配置和环境
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    
    # 数据处理
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    
    # 日志
    "structlog>=23.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "ipdb>=0.13.0",
    "rich>=13.0.0",
]
prod = [
    "gunicorn>=21.0.0",
    "sentry-sdk[fastapi]>=1.30.0",
    "uvloop>=0.17.0; sys_platform != 'win32'",
    "orjson>=3.8.0",
    "cryptography>=41.0.0",
]

[project.urls]
Homepage = "https://github.com/yaxin-team/yaxin-memo"
Documentation = "https://github.com/yaxin-team/yaxin-memo/blob/main/README.md"
Repository = "https://github.com/yaxin-team/yaxin-memo.git"
Issues = "https://github.com/yaxin-team/yaxin-memo/issues"

[project.scripts]
yaxin-memo = "app:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["yaxin_memo*"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["yaxin_memo"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--tb=short",
    "--cov=.",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["."]
omit = [
    "venv/*",
    "test/*",
    "*/test_*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]